# trawl

./: .gitignore  Cargo.toml  Makefile  README.md  pkgforge.yaml  postbuild.sh  resmand.service  shell.nix  trawld.service
.forgejo/workflows/: publish.yaml
.github/workflows/: update-changelog.yml
.pkgforge/: spec-ee0e75478418efbe.json
client/: interface.xml  meson.build
client/include/: config_manager.h
client/src/: config_manager.c
client_api/: .gitignore  client_api.c  client_api.h  meson.build  service.xml
client_api/.cache/clangd/index/: client_api.c.0E545F00A68324E9.idx  client_api.h.D354EE9C9CD00535.idx  main.c.3B671022E564885B.idx
client_api/example/: main.c  meson.build
client_api/scripts/: run_codegen.sh  uninstall.sh
debian/: README.Debian  changelog  control  copyright  libtrawldb.install  trawlcat.install  trawld.install  trawldb.install
examples/: resources
examples/partials.d/: swayidle
rescat/: Cargo.toml
rescat/src/: main.rs
resdb/: Cargo.toml
resdb/src/: lib.rs  main.rs  manager.rs  parser.rs
resdb/tests/: common.rs  integration_tests.rs
resmand/: Cargo.toml
resmand/src/: lib.rs  log.rs  main.rs  parser.rs  tests.rs
trawlcat/: Cargo.toml
trawlcat/src/: lib.rs  main.rs
trawld/: Cargo.toml  trawld.service
trawld/src/: common.rs  lib.rs  main.rs  tests.rs
trawldb/: Cargo.toml
trawldb/src/: lib.rs  main.rs  manager.rs  parser.rs
trawldb/tests/: common.rs  integration_tests.rs
