[package]
name = "resdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
zbus = { version = "2", default-features = false, features = ["tokio"] }

[dev-dependencies]
resmand = {path = "../resmand"}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
