[package]
name = "trawlcat"
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
authors = ["Soumya Ranjan Patnaik <soumyaranjan1812@gmail.com>", "Ken Gilmer <kgilmer@gmail.com>"]
description = "A CLI for fetching value of trawl resource while omitting surrounding quotes"
repository = "https://github.com/regolith-linux/trawl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trawldb = "0.2.9"
clap = { version = "4.5.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
