[package]
name = "trawld"
version = "0.2.8"
edition = "2021"
license = "Apache-2.0"
authors = ["Soumya Ranjan Patnaik <soumyaranjan1812@gmail.com>", "Ken Gilmer <kgilmer@gmail.com>"]
description = "Configuration Manager daemon for trawl"
repository = "https://github.com/regolith-linux/trawl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }
colored = "2.0.0"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
