[package]
name = "trawldb"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "A CLI for managing trawl resources"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }

[dev-dependencies]
trawld = { path = "../trawld" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
