[package]
name = "trawldb"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
authors = ["Soumya Ranjan Patniak <soumyaranjan1812@gmail.com>", "Ken Gilmer <kgilmer@gmail.com>"]
description = "A CLI for managing trawl resources"
repository = "https://github.com/regolith-linux/trawl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zbus = { version = "4.4", default-features = false, features = ["tokio"] }

[dev-dependencies]
trawld = "0.2.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
